--- a/index.html
+++ b/index.html
@@ -15,44 +15,25 @@
     <div class="nav-center">
       <ul class="nav-links">
         <li><a href="index.html">Accueil</a></li>
-        <li>
-          <a href="#">À Emporter ▾</a>
+        <li class="dropdown">
+          <span class="dropdown-toggle">À Emporter ▾</span>
           <div class="dropdown-content">
             <a href="pizzas.html">Nos Pizzas</a>
             <a href="pates.html">Nos Pâtes</a>
           </div>
         </li>
-        <li><a href="#">Réservation</a></li>
-        <li><a href="#">Contact</a></li>
+        
+        <li><a href="reservation.html">Réservation</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
 
-  <section class="hero">
-    <h2>Bienvenue chez Sirena 2</h2>
-    <p>Découvrez les saveurs authentiques de l’Italie dans une ambiance chaleureuse.</p>
-  </section>
-
-  <main class="gallery-staggered">
-    <div class="row">
-      <div class="half">
-        <img src="gallery_left.png" alt="Antipasti italien">
-      </div>
-      <div class="half text-block">
-        <h3>Notre plat de la semaine</h3>
-        <p>L’assiette d’antipasti, un assortiment de charcuteries fines, mozzarella marinée, parmesan et roquette fraîche. Parfait pour commencer votre repas avec authenticité.</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="half text-block">
-        <h3>Venez goûter nos spécialités !</h3>
-        <p>Des plats savoureux préparés avec passion chaque jour. N’hésitez pas à réserver votre table pour vivre l’expérience Sirena 2.</p>
-      </div>
-      <div class="half">
-        <img src="gallery_right.png" alt="Pâtes aux crevettes">
-      </div>
-    </div>
+  <main class="maintenance-message">
+    <img src="pizzaiolo_maintenance.png" alt="Pizzaiolo en maintenance" class="maintenance-image">
+    <h3>Notre site est en maintenance</h3>
+    <p>Veuillez nous excuser pour la gêne occasionnée. Nous revenons très bientôt !</p>
+    <p>Vous pouvez quand même voir nos plats à emporter et notre menu !</p>
   </main>
 
   <footer>
