--- a/pates.html
+++ b/pates.html
@@ -27,6 +27,42 @@
     </ul>
   </nav>
 
+  
+<main class="menu">
+  <h1>Pâtes à emporter</h1>
+  <section class="menu-section">
+    <h2>Pasta Classique</h2>
+    <ul>
+      <li><strong>Penne 4 Fromaggi</strong> – Crème, Gorgonzola, Taleggio, Parmesan <span>15,50 €</span></li>
+      <li><strong>Spaghetti Bolognaise</strong> <span>13,50 €</span></li>
+      <li><strong>Spaghetti Carbonara</strong> – Crème, Lardon <span>15,00 €</span></li>
+      <li><strong>Penne Proscuito</strong> – Crème, Jambon <span>13,00 €</span></li>
+      <li><strong>Penne Diavola</strong> – Sauce Tomate, Piment, Ail, Basilic <span>14,00 €</span></li>
+      <li><strong>Penne Al Pollo</strong> – Poulet, Sauce Gorgonzola <span>16,50 €</span></li>
+      <li><strong>Tagliatelle Al Forno</strong> – Crème, Tomate, Jambon, Champignon <span>16,00 €</span></li>
+      <li><strong>Tagliatelle Scampis</strong> – Scampis déglacés à la vodka, ciboulette, ail, crème tomate <span>18,00 €</span></li>
+      <li><strong>Penne Brocolis</strong> – Crème, Lardon, Brocolis <span>15,50 €</span></li>
+      <li><strong>Lasagne Della Casa</strong> – Jambon, Bolognaise, Crème Tomate <span>15,50 €</span></li>
+      <li><strong>Cannelloni Della Nonna</strong> – Viande, Crème, Tomate <span>16,00 €</span></li>
+      <li><strong>Spaghetti Végétarien</strong> – Courgette, Aubergine, Tomate, Oignon, Basilic, Légumes de saison <span>16,50 €</span></li>
+      <li><strong>Pasta Bambino (Enfant)</strong> <span>8,90 €</span></li>
+    </ul>
+  </section>
+
+  <section class="menu-section">
+    <h2>Pasta Gourmet</h2>
+    <ul>
+      <li><strong>Spaghetti Paesana</strong> – Thon, Échalote rouge, Tomate fraîche, Ail, Huile d’olive, Basilic, Câpres <span>17,50 €</span></li>
+      <li><strong>Spaghetti Vongole</strong> – Palourdes, Tomate fraîche, Ail, Persil <span>20,50 €</span></li>
+      <li><strong>Spaghetti Frutti Di Mare</strong> – Tomate cuisinée, Ail, Basilic, Cocktail de fruits de mer <span>22,50 €</span></li>
+      <li><strong>Spaghetti San Daniele</strong> – Marinade de Parme, Roquette, Huile d’olive, Tomate séchée, Parmesan <span>18,90 €</span></li>
+      <li><strong>Pappardelle Aux Truffes</strong> – Crème de truffe, Tomates cerises <span>19,50 €</span></li>
+      <li><strong>Risotto Frutti Di Mare</strong> – Fruits de mer, Ail, Basilic, Vin blanc, Tomate cuisinée <span>23,00 €</span></li>
+      <li><strong>Gnoccocchi Aux Truffes</strong> – Champignons, Salsa Tartufata, Sauce Gorgonzola <span>15,90 €</span></li>
+    </ul>
+  </section>
+</main>
+
   <footer>
     📍 Rue Haute Vinave 20, 4690 Glons — 📞 04 286 57 37 — ✉️ contact@sirena2.be
   </footer>
