--- a/pates.html
+++ b/pates.html
@@ -20,8 +20,8 @@
     .navbar {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      background-color: #b22222;
+      justify-content: center;
+      background-color: #ffffff;
       padding: 10px 20px;
     }
 
@@ -32,7 +32,7 @@
     .nav-links {
       list-style: none;
       display: flex;
-      gap: 20px;
+      gap: 40px;
     }
 
     .nav-links li {
@@ -76,7 +76,7 @@
 
     .menu h1 {
       text-align: center;
-      color: #b22222;
+      color: #fafafa;
       font-size: 2.5rem;
     }
 
