--- a/pates.html
+++ b/pates.html
@@ -16,6 +16,7 @@
       padding: 0;
       color: #333;
     }
+
     .navbar {
   display: flex;
   align-items: center;
@@ -25,16 +26,12 @@
   padding: 0 20px;
   background-color: white;
 }
-    .nav-center {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
+
+.logo {
+  height: 60px;
 }
 
-    .logo {
-      height: 60px;
-    }
-    .nav-links {
+.nav-links {
   list-style: none;
   display: flex;
   gap: 40px;
@@ -43,6 +40,7 @@
   transform: translateX(-50%);
   margin: 0;
   padding: 0;
+  z-index: 10;
 }
 
     .nav-links li {
@@ -50,7 +48,7 @@
     }
 
     .nav-links a {
-      color: white;
+      color: #333;
       text-decoration: none;
       font-weight: bold;
     }
@@ -58,7 +56,7 @@
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: white;
+      background-color: #333;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       border-radius: 4px;
       top: 100%;
@@ -86,7 +84,7 @@
 
     .menu h1 {
       text-align: center;
-      color: #c20d0d;
+      color: #b22222;
       font-size: 2.5rem;
     }
 
@@ -160,7 +158,8 @@
     <img src="logo.png" alt="Logo Sirena 2" class="logo" />
     <ul class="nav-links">
       <li><a href="index.html">Accueil</a></li>
-      <li><a href="#">À Emporter ▾</a>
+      <li>
+        <a href="#">À Emporter ▾</a>
         <div class="dropdown-content">
           <a href="pizzas.html">Nos Pizzas</a>
           <a href="pates.html">Nos Pâtes</a>
@@ -170,12 +169,9 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  
-  
+
   <main class="menu">
     <h1>Pâtes à emporter</h1>
-
-    <!-- Pasta Classique -->
     <section class="menu-section">
       <h2>Pasta Classique</h2>
       <ul>
@@ -194,8 +190,6 @@
         <li><strong>Pasta Bambino</strong> Enfant <span>8,90 €</span></li>
       </ul>
     </section>
-
-    <!-- Pasta Gourmet -->
     <section class="menu-section">
       <h2>Pasta Gourmet</h2>
       <ul>
