--- a/pates.html
+++ b/pates.html
@@ -48,7 +48,7 @@
     }
 
     .nav-links a {
-      color: #333;
+      color: #ffffff;
       text-decoration: none;
       font-weight: bold;
     }
