--- a/pates.html
+++ b/pates.html
@@ -48,7 +48,7 @@
     }
 
     .nav-links a {
-      color: #b22222;
+      color: #ffffff;
       text-decoration: none;
       font-weight: bold;
     }
@@ -128,7 +128,7 @@
       text-align: right;
       white-space: nowrap;
     }
-  </style
+  </style>
 
     footer {
       background-color: #222;
@@ -148,7 +148,7 @@
         margin-top: 8px;
       }
     }
-  </stylee>
+  </style>
 </head>
 <body>
   <nav class="navbar">
